# mec-connect

./: .env.template  .gitignore  .pre-commit-config.yaml  DEVELOPPEUR.md  Makefile  README.md  Suivi PTZC MonEspaceCollectivité-Tableau_de_suivi.csv  docker-compose.yml  manage.py  pyproject.toml
.docker/: .gitignore
mec_connect/: __init__.py  api.py  asgi.py  mec_client.py  urls.py  worker.py  wsgi.py
mec_connect/api/: main.py
mec_connect/grist/: apps.py  models.py  tasks.py
mec_connect/main/: admin.py  apps.py  choices.py  grist.py  models.py  recoco.py  schemas.py  tasks.py  triggers.py  urls.py  views.py
mec_connect/main/management/commands/: create_grist_table_project.py  grist_table_project.py
mec_connect/main/migrations/: 0001_initial.py  0002_alter_webhookevent_object_type.py  0003_alter_webhookevent_object_type.py  0004_gristconfig.py  0005_remove_gristconfig_table_id.py  0006_gristconfig_table_id.py  0007_alter_gristconfig_table_id.py  0008_gristconfig_columns.py
mec_connect/main/tests/: conftest.py  test_grist.py  test_views.py
mec_connect/settings/: default.py  testing.py
mec_connect/utils/: json.py  models.py
mec_connect/webhook/: choices.py  models.py
sandbox/: grist_client.py  recoco_client.py
